@@ -1,3 +1,5 @@
 .project
 .cproject
+*.rpm
+*.tar.gz
 
